; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_json.c_jsB_initjson.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_json.c_jsB_initjson.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@JS_CJSON = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"JSON.parse\00", align 1
@JSON_parse = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"JSON.stringify\00", align 1
@JSON_stringify = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [5 x i8] c"JSON\00", align 1
@JS_DONTENUM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jsB_initjson(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %3 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %5 = load i32, i32* @JS_CJSON, align 4
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @jsV_newobject(%struct.TYPE_7__* %4, i32 %5, i32 %8)
  %10 = call i32 @js_pushobject(%struct.TYPE_7__* %3, i32 %9)
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %12 = load i32, i32* @JSON_parse, align 4
  %13 = call i32 @jsB_propf(%struct.TYPE_7__* %11, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %12, i32 2)
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %15 = load i32, i32* @JSON_stringify, align 4
  %16 = call i32 @jsB_propf(%struct.TYPE_7__* %14, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %15, i32 3)
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %18 = load i32, i32* @JS_DONTENUM, align 4
  %19 = call i32 @js_defglobal(%struct.TYPE_7__* %17, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %18)
  ret void
}

declare dso_local i32 @js_pushobject(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @jsV_newobject(%struct.TYPE_7__*, i32, i32) #1

declare dso_local i32 @jsB_propf(%struct.TYPE_7__*, i8*, i32, i32) #1

declare dso_local i32 @js_defglobal(%struct.TYPE_7__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
